--- a/WebShop/WebShop/ClientApp/src/app/nav-menu/nav-menu.component.html
+++ b/WebShop/WebShop/ClientApp/src/app/nav-menu/nav-menu.component.html
@@ -34,6 +34,9 @@
           <li class="nav-item" [routerLinkActive]="['link-active']">
             <a class="nav-link text-dark" [routerLink]="['/all-boards']">All boards</a>
           </li>
+          <li class="nav-item" [routerLinkActive]="['link-active']">
+            <a class="nav-link text-dark" [routerLink]="['/login-panel']">Login</a>
+          </li>
         </ul>
       </div>
     </div>
