--- a/WebShop/WebShop/ClientApp/src/app/nav-menu/nav-menu.component.html
+++ b/WebShop/WebShop/ClientApp/src/app/nav-menu/nav-menu.component.html
@@ -37,6 +37,12 @@
           <li class="nav-item" [routerLinkActive]="['link-active']">
             <a class="nav-link text-dark" [routerLink]="['/login-panel']">Login</a>
           </li>
+          <li class="nav-item" [routerLinkActive]="['link-active']">
+            <a class="nav-link text-dark" [routerLink]="['/register-panel']">Register</a>
+          </li>
+          <li class="nav-item" [routerLinkActive]="['link-active']">
+            <a class="nav-link text-dark" [routerLink]="['/cart-panel']"> Cart <img class="cart" src="../../assets/images/shopping-cart.png"/></a>
+          </li>
         </ul>
       </div>
     </div>
