--- a/WebShop/WebShop/ClientApp/src/app/app.component.html
+++ b/WebShop/WebShop/ClientApp/src/app/app.component.html
@@ -2,5 +2,7 @@
   <app-nav-menu></app-nav-menu>
   <div class="container">
     <router-outlet></router-outlet>
+    <div>Icons made by <a href="https://www.flaticon.com/authors/freepik" title="Freepik">Freepik</a> from <a href="https://www.flaticon.com/" title="Flaticon">www.flaticon.com</a></div>
   </div>
+  
 </body>
