--- a/WebShop/WebShop/ClientApp/src/app/login-panel/login-panel.component.html
+++ b/WebShop/WebShop/ClientApp/src/app/login-panel/login-panel.component.html
@@ -10,7 +10,7 @@
         <input class="sidenav-input" type="password" placeholder="Password">
       </div>
       <div class="row">
-        <button class="btn btn-primary btn-lg">Login</button>
+        <button class="btn btn-primary btn-lg" (click)="loginProcess()">Login</button>
       </div>
     </div>
   </form>
