--- a/WebShop/WebShop/ClientApp/src/app/nav-menu/nav-menu.component.html
+++ b/WebShop/WebShop/ClientApp/src/app/nav-menu/nav-menu.component.html
@@ -3,7 +3,7 @@
     class="navbar navbar-expand-sm navbar-toggleable-sm navbar-light border-bottom box-shadow mb-3"
   >
     <div class="container">
-      <a class="navbar-brand" [routerLink]="['/']">WebShop</a>
+      <a class="navbar-brand" [routerLink]="['/']">Datacrafter</a>
       <button
         class="navbar-toggler"
         type="button"
@@ -32,7 +32,7 @@
             <a class="nav-link text-dark" [routerLink]="['/fetch-data']">Fetch data</a>
           </li>
           <li class="nav-item" [routerLinkActive]="['link-active']">
-            <a class="nav-link text-dark" [routerLink]="['/all-boards']">All boards</a>
+            <a class="nav-link text-dark" [routerLink]="['/all-boards']">Bookstore</a>
           </li>
           <li class="nav-item" [routerLinkActive]="['link-active']">
             <a class="nav-link text-dark" [routerLink]="['/login-panel']">Login</a>
@@ -41,7 +41,7 @@
             <a class="nav-link text-dark" [routerLink]="['/register-panel']">Register</a>
           </li>
           <li class="nav-item" [routerLinkActive]="['link-active']">
-            <a class="nav-link text-dark" [routerLink]="['/cart-panel']"> Cart <img class="cart" src="../../assets/images/shopping-cart.png"/></a>
+            <a class="nav-link text-dark" [routerLink]="['/cart-panel']"> <img class="cart" src="../../assets/images/shopping-cart.png"/></a>
           </li>
         </ul>
       </div>
