--- a/WebShop/WebShop/ClientApp/src/app/fruits/fruits.component.html
+++ b/WebShop/WebShop/ClientApp/src/app/fruits/fruits.component.html
@@ -1,4 +1,4 @@
-<h1 id="tableLabel">All boards</h1>
+<h1 id="tableLabel">Fruits</h1>
 
 <p>This component demonstrates fetching all boards list from the server.</p>
 
