--- a/WebShop/WebShop/ClientApp/src/app/home/home.component.html
+++ b/WebShop/WebShop/ClientApp/src/app/home/home.component.html
@@ -1,11 +1,5 @@
-<h1>Datacrafter</h1>
+<h1>This is a software portfolio only, please do not consider it as a shop.</h1>
 <br />
-<p>WordPress</p>
-<p>PrestaShop</p>
-<p>Here.com Map</p>
-<p>Google Maps API</p>
-<br />
-<p>Microsoft SharePoint</p>
-<p>Microsoft SQL Server</p>
+<h1>This website uses cookies. By continuing we assume your permission to deploy cookies.</h1>
 <br />
 
