--- a/WebShop/WebShop/ClientApp/src/app/nav-menu/nav-menu.component.html
+++ b/WebShop/WebShop/ClientApp/src/app/nav-menu/nav-menu.component.html
@@ -26,13 +26,7 @@
             <a class="nav-link text-dark" [routerLink]="['/']">Home</a>
           </li>
           <li class="nav-item" [routerLinkActive]="['link-active']">
-            <a class="nav-link text-dark" [routerLink]="['/counter']">Counter</a>
-          </li>
-          <li class="nav-item" [routerLinkActive]="['link-active']">
-            <a class="nav-link text-dark" [routerLink]="['/fetch-data']">Fetch data</a>
-          </li>
-          <li class="nav-item" [routerLinkActive]="['link-active']">
-            <a class="nav-link text-dark" [routerLink]="['/all-boards']">Fruit shop</a>
+            <a class="nav-link text-dark" [routerLink]="['/fruits']">Fruit shop</a>
           </li>
           <li class="nav-item" [routerLinkActive]="['link-active']">
             <a class="nav-link text-dark" [routerLink]="['/login-panel']">Login</a>
@@ -41,8 +35,10 @@
             <a class="nav-link text-dark" [routerLink]="['/register-panel']">Register</a>
           </li>
           <li class="nav-item" [routerLinkActive]="['link-active']">
+            <a class="nav-link text-dark" [routerLink]="['/fetch-data']">Admin panel</a>
+          </li>
+          <li class="nav-item" [routerLinkActive]="['link-active']">
             <a class="nav-link text-dark" [routerLink]="['/cart-panel']"> <img class="cart" src="../../assets/images/shopping-cart.png" /><span class='badge badge-warning' id='lblCartCount'> 6 </span></a>
-            
           </li>
         </ul>
       </div>
