--- a/WebShop3.0.0/WebApplication3/ClientApp/src/app/fruits/fruits.component.html
+++ b/WebShop3.0.0/WebApplication3/ClientApp/src/app/fruits/fruits.component.html
@@ -1,6 +1,6 @@
 <h1 id="tableLabel">Fruits</h1>
 
-<p>This component demonstrates fetching all boards list from the server.</p>
+<p>This component demonstrates fetching fruits list from the server.</p>
 
 <p *ngIf="!boards"><em>Loading...</em></p>
 
