--- a/WebShop3.0.0/WebApplication3/ClientApp/src/app/fruits/fruits.component.html
+++ b/WebShop3.0.0/WebApplication3/ClientApp/src/app/fruits/fruits.component.html
@@ -9,26 +9,23 @@
     <tr>
       <th>Id</th>
       <th>Name</th>
-      <th>Date</th>
       <th>Picture</th>
-      <th>Picture</th>
-      <th>Picture</th>
-      <th>Picture</th>
-      <th>Picture</th>
-
+      <th>Button</th>
+      <th>Description</th>
     </tr>
   </thead>
   <tbody>
     <tr *ngFor="let board of boards">
       <td>{{ board.id }}</td>
-      <td>{{ board.name }}</td>
-      <td>{{ board.date }}</td>
-      <td>{{ board.temperatureC }}</td>
-      <td>{{ board.temperatureF }}</td>
-      <td>{{ board.summary }}</td>
-      <td>{{ board.picture }}</td>
+      <td>
+        <a [routerLink]='["/fruits-detal", board.id]'>
+           {{ board.name }}
+        </a>
+        
+      </td>
       <td><img class="shop-articles" src="{{ board.picture }}" /></td>
       <td><button class="btn btn-primary btn-lg" (click)="buyProcess(board.id, board.name)">Buy</button></td>
+      <td>Description</td>
     </tr>
   </tbody>
 </table>
