--- a/WebShop3.0.0/WebApplication3/ClientApp/src/app/nav-menu/nav-menu.component.html
+++ b/WebShop3.0.0/WebApplication3/ClientApp/src/app/nav-menu/nav-menu.component.html
@@ -18,18 +18,8 @@
               </a>
             </li>
             <li [routerLinkActive]='["link-active"]'>
-              <a [routerLink]='["/counter"]' (click)='collapse()'>
-                <span class='glyphicon glyphicon-education'></span> Counter
-              </a>
-            </li>
-            <li [routerLinkActive]='["link-active"]'>
-              <a [routerLink]='["/fetch-data"]' (click)='collapse()'>
-                <span class='glyphicon glyphicon-th-list'></span> Fetch data
-              </a>
-            </li>
-            <li [routerLinkActive]='["link-active"]'>
-              <a [routerLink]='["/fruits"]' (click)='collapse()'>
-                <span class='glyphicon glyphicon-apple'></span> Fruits
+              <a [routerLink]='["/travel"]' (click)='collapse()'>
+                <span class='glyphicon glyphicon-briefcase'></span> Travel accessories
               </a>
             </li>
             <li [routerLinkActive]='["link-active"]'>
@@ -44,7 +34,7 @@
             </li>
             <li [routerLinkActive]='["link-active"]'>
               <a [routerLink]='["/cart-panel"]' (click)='collapse()'>
-                <span class='glyphicon glyphicon-shopping-cart'></span>  Cart <span class='badge badge-warning' id='lblCartCount'> 0 </span> 
+                <span class='glyphicon glyphicon-shopping-cart'></span>  Cart <span class='badge badge-warning' id='lblCartCount'> 0 </span>
               </a>
             </li>
           </ul>
