--- a/WebShop3.0.0/WebApplication3/ClientApp/src/app/app.component.html
+++ b/WebShop3.0.0/WebApplication3/ClientApp/src/app/app.component.html
@@ -5,8 +5,7 @@
     </div>
     <div class='col-sm-9 body-content'>
       <router-outlet></router-outlet>
-      Icons made by <a href="https://www.flaticon.com/authors/dinosoftlabs" title="DinosoftLabs">DinosoftLabs</a> from <a href="https://www.flaticon.com/" title="Flaticon"> www.flaticon.com</a>
-      <div>Icons made by <a href="https://www.flaticon.com/authors/freepik" title="Freepik">Freepik</a> from <a href="https://www.flaticon.com/" title="Flaticon">www.flaticon.com</a></div>
+      <div>Icons made by <a href="https://www.flaticon.com/authors/icongeek26" title="Icongeek26">Icongeek26</a> from <a href="https://www.flaticon.com/" title="Flaticon">www.flaticon.com</a></div>
     </div>
   </div>
 </div>
