--- a/WebShop3.0.0/WebApplication3/ClientApp/src/app/home/home.component.html
+++ b/WebShop3.0.0/WebApplication3/ClientApp/src/app/home/home.component.html
@@ -1,5 +1,28 @@
 <h1>This is a software portfolio only, please do not consider it as a shop.</h1>
 <br />
-<h1>This website uses cookies.</h1>
-<h1>By continuing we assume your permission to deploy cookies.</h1>
 <br />
+<button type="button" class="btn btn-primary" data-toggle="modal" data-target="#exampleModalCenter" (click)="openModalWindow()">
+  Launch window modal
+</button>
+<br />
+<br />
+
+<div class="modal-dialog modal-dialog-centered" role="document" id="modalwindow1">
+  <div class="modal-content">
+    <div class="modal-header">
+      <h5 class="modal-title" id="exampleModalLongTitle">Modal counter window</h5>
+      <button type="button" class="close" data-dismiss="modal" aria-label="Close" (click)="closeModalWindow()">
+        <span aria-hidden="true">&times;</span>
+      </button>
+    </div>
+    <div class="modal-body" id="modalwindowmsg">
+      This website uses cookies.
+      By continuing we assume your permission to deploy cookies.
+    </div>
+    <div class="modal-footer">
+      <button type="button" class="btn btn-secondary" data-dismiss="modal" (click)="closeModalWindow()">Close</button>
+      <button type="button" class="btn btn-primary" (click)="saveChangesModalWindow()">Save changes</button>
+    </div>
+  </div>
+</div>
+
