--- a/WebShop3.0.0/WebApplication3/ClientApp/src/app/nav-menu/nav-menu.component.html
+++ b/WebShop3.0.0/WebApplication3/ClientApp/src/app/nav-menu/nav-menu.component.html
@@ -14,12 +14,12 @@
           <ul class='nav navbar-nav'>
             <li [routerLinkActive]='["link-active"]' [routerLinkActiveOptions]='{ exact: true }'>
               <a [routerLink]='["/"]' (click)='collapse()'>
-                <span class='glyphicon glyphicon-home'></span> Home
+                <span class='glyphicon glyphicon-home'></span> Dices
               </a>
             </li>
             <li [routerLinkActive]='["link-active"]'>
               <a [routerLink]='["/travel"]' (click)='collapse()'>
-                <span class='glyphicon glyphicon-briefcase'></span> Travel accessories
+                <span class='glyphicon glyphicon-briefcase'></span> Accessories
               </a>
             </li>
             <li [routerLinkActive]='["link-active"]'>
