--- a/WebShop3.0.0/WebApplication3/ClientApp/src/app/cart-panel/cart-panel.component.html
+++ b/WebShop3.0.0/WebApplication3/ClientApp/src/app/cart-panel/cart-panel.component.html
@@ -4,3 +4,28 @@
 <p *ngFor="let item of mylist">{{ item }}</p>
 <p><button class="btn btn-primary btn-lg" (click)="orderCart()">Order items</button></p>
 <p><button class="btn btn-primary btn-lg" (click)="clearCart()">Remove items</button></p>
+
+
+<button type="button" class="btn btn-primary" data-toggle="modal" data-target="#exampleModalCenter" (click)="openModalWindow()">
+  Modal window
+</button>
+<br />
+<br />
+
+<div class="modal-dialog modal-dialog-centered" role="document" id="modalwindow1">
+  <div class="modal-content">
+    <div class="modal-header">
+      <h5 class="modal-title" id="exampleModalLongTitle">Modal counter window</h5>
+      <button type="button" class="close" data-dismiss="modal" aria-label="Close" (click)="closeModalWindow()">
+        <span aria-hidden="true">&times;</span>
+      </button>
+    </div>
+    <div class="modal-body" id="modalwindowmsg">
+      Modal window
+    </div>
+    <div class="modal-footer">
+      <button type="button" class="btn btn-secondary" data-dismiss="modal" (click)="closeModalWindow()">Close</button>
+      <button type="button" class="btn btn-primary" (click)="saveChangesModalWindow()">Save changes</button>
+    </div>
+  </div>
+</div>
