--- a/WebShop3.0.0/WebApplication3/ClientApp/src/app/cart-panel/cart-panel.component.html
+++ b/WebShop3.0.0/WebApplication3/ClientApp/src/app/cart-panel/cart-panel.component.html
@@ -7,9 +7,9 @@
 
     <tr>
       <th>{{ item.boardName }}</th>
-      <th>{{ item.priceZK }}zk </th>
-      <th>{{ item.priceSS }}s </th>
-      <th>{{ item.priceP }}p</th>
+      <th>{{ item.priceEUR }}zk </th>
+      <th>{{ item.priceUSD }}s </th>
+      <th>{{ item.pricePLN }}p</th>
     </tr>
     </p>
   </thead>
