--- a/Reshop/Reshop/clientapp/src/app/login/login.component.html
+++ b/Reshop/Reshop/clientapp/src/app/login/login.component.html
@@ -1,2 +1,14 @@
-<h1 id="tableLabel">Login</h1>
-
+<h2>Login</h2>
+<form>
+    <div class="form-group">
+        <label for="username">Username: </label>
+        <input type="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp" placeholder="Enter email">
+    </div>
+    <div class="form-group">
+        <label for="password">Password: </label>
+        <input type="password" class="form-control" id="exampleInputPassword1" placeholder="Password">
+    </div>
+    <button (click)="OnSubmit('admin','tajnehaslo54321')" class="btn btn-primary">
+      Login
+  </button>
+</form>
