--- a/Reshop/Reshop/clientapp/src/app/login/login.component.html
+++ b/Reshop/Reshop/clientapp/src/app/login/login.component.html
@@ -11,4 +11,7 @@
     <button (click)="OnSubmit('admin','tajnehaslo54321')" class="btn btn-primary">
       Login
   </button>
+  <button (click)="OnRegister('admin','tajnehaslo54321')" class="btn btn-primary">
+    Register
+    </button>
 </form>
