--- a/Reshop/Reshop/clientapp/src/app/app.component.html
+++ b/Reshop/Reshop/clientapp/src/app/app.component.html
@@ -352,6 +352,10 @@
   <span>1. Proste maty</span>
   <h3> Diagram 22:</h3>
   <canvas id="canvasChessboard2" width="800px" height="500px"></canvas>
+  <button (click)="Render1()" class="btn btn-primary">1</button>
+  <button (click)="Render2()" class="btn btn-primary">2</button>
+  <button (click)="Render3()" class="btn btn-primary">3</button>
+  <button (click)="Render4()" class="btn btn-primary">4</button>
   <!-- Footer -->
   <footer>
       Like Datacrafter?&nbsp;
