--- a/Reshop/Reshop/clientapp/src/app/login/login.component.html
+++ b/Reshop/Reshop/clientapp/src/app/login/login.component.html
@@ -7,6 +7,6 @@
 
       <label for="password">Password</label>
       <input id="password" type="text" formControlName="password">
-      <button type="submit" class="primary">Apply now</button>
+      <button type="submit" class="primary">Login</button>
     </form>
   </section>
