--- a/Reshop/Reshop/clientapp/src/app/homes/homes.component.html
+++ b/Reshop/Reshop/clientapp/src/app/homes/homes.component.html
@@ -1,6 +1,6 @@
 <section>
   <form>
-    <input type="text" placeholder="Filter by city">
+    <input type="text" placeholder="Filtrowanie po nazwie miasta">
     <button class="primary" type="button">Search</button>
   </form>
 </section>
