--- a/Reshop/Reshop/clientapp/src/app/login/login.component.html
+++ b/Reshop/Reshop/clientapp/src/app/login/login.component.html
@@ -6,7 +6,7 @@
       <input id="login" type="text" formControlName="login">
 
       <label for="password">Password</label>
-      <input id="password" type="text" formControlName="password">
+      <input id="password" type="password" formControlName="password">
       <button type="submit" class="primary">Login</button>
     </form>
   </section>
