--- a/Reshop/Reshop/clientapp/src/app/app.component.html
+++ b/Reshop/Reshop/clientapp/src/app/app.component.html
@@ -307,7 +307,7 @@
   <span>Sklep internetowy</span>
     <div class="spacer"></div>
   <form action="/user">
-      <input type="submit" value="Uzytkownik" />
+      <input type="submit" id="user-name" value="Uzytkownik" />
   </form>
 
   <form action="/cart">
