--- a/Reshop/Reshop/clientapp/src/app/home/home.component.html
+++ b/Reshop/Reshop/clientapp/src/app/home/home.component.html
@@ -1,1 +1,23 @@
-<p>home works!</p>
+<div class="card">
+    <div class="card-header">
+      {{pageTitle}}
+    </div>
+    <div class="card-body">
+      <div class="container-fluid">
+        <div class="text-center">
+          <img src="./assets/images/logo.png"
+               class="img-responsive center-block"
+               style="max-height:300px;padding-bottom:50px" />
+        </div>
+  
+        <div class="text-center">Developed by:</div>
+        <div class="text-center">
+          <h3>Marcel Sawicki</h3>
+        </div>
+        <div class="text-center">2024</div>
+        <div class="text-center">
+          <a href="https://github.com/marcelsawicki">https://github.com/marcelsawicki</a>
+        </div>
+      </div>
+    </div>
+  </div>
