--- a/AngularApp1/angularapp1.client/src/app/register/register.component.html
+++ b/AngularApp1/angularapp1.client/src/app/register/register.component.html
@@ -31,7 +31,7 @@
         <td>
         </td>
         <td style="padding: 8px;">
-          <button type="submit" class="primary">Register</button>
+          <button type="submit" class="btn btn-success">Register</button>
         </td>
       </tr>
     </table>
