--- a/AngularApp1/angularapp1.client/src/app/learning/learning.component.html
+++ b/AngularApp1/angularapp1.client/src/app/learning/learning.component.html
@@ -9,7 +9,7 @@
         <div>
             <button class="btn btn-success" (click)="checkAnswer('A')"><h2>A: {{ question.answera}}</h2></button>
             <button class="btn btn-success" (click)="checkAnswer('B')"><h2>B: {{ question.answerb}}</h2></button>
-            <button class="btn btn-success" (click)="checkAnswer('C')"><h2>{{ question.answerc}}</h2></button>
+            <button class="btn btn-success" (click)="checkAnswer('C')"><h2>C: {{ question.answerc}}</h2></button>
         </div>
     } @else {
         <div>
